--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,30 @@ on:
       - master
 
 jobs:
-  lint-and-test:
+  # Job 1: Lint (rápido, feedback imediato)
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22.14.0"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run linter
+        run: npm run lint
+
+      - name: Type check
+        run: npm run typecheck
+
+  # Job 2: Test (com banco de dados)
+  test:
     runs-on: ubuntu-latest
 
     services:
@@ -25,31 +48,56 @@ jobs:
           --health-retries=5
 
     steps:
-      - name: Checkout do código
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Instalar Node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: "22.14.0"
+          cache: "npm"
 
-      - name: Instalar dependências
+      - name: Install dependencies
         run: npm ci
 
-      - name: Definir DATABASE_URL para o container MySQL
-        run: echo "DATABASE_URL=mysql://root:root@localhost:3306/test_db" >> $GITHUB_ENV
+      - name: Setup database
+        run: |
+          echo "DATABASE_URL=mysql://root:root@localhost:3306/test_db" >> $GITHUB_ENV
+          npx prisma generate
+          npx prisma migrate deploy
+          npx prisma db seed
 
-      - name: Gerar client do Prisma
+      - name: Run tests
+        run: npm test -- --ci --passWithNoTests
+
+  # Job 3: Build (só roda se lint E test passarem)
+  build:
+    needs: [lint, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22.14.0"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Generate Prisma Client
         run: npx prisma generate
 
-      - name: Rodar migrations no banco
-        run: npx prisma migrate deploy
+      - name: Build application
+        run: npm run build
 
-      - name: Rodar seeds no banco
-        run: npx prisma db seed
-
-      - name: Rodar linter
-        run: npm run lint --if-present
-
-      - name: Rodar testes
-        run: npm test -- --ci --passWithNoTests
+      - name: Check build artifacts
+        run: |
+          echo "✅ Build concluído com sucesso!"
+          echo "📦 Tamanho do build:"
+          du -sh dist/
+          echo ""
+          echo "📂 Arquivos criados:"
+          ls -lh dist/ | head -20
