--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.0",
+    "bullmq": "^5.61.2",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.6",
@@ -30,6 +31,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "husky": "^9.1.7",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.0",
     "mime": "^3.0.0",
     "morgan": "^1.10.0",
